Manifests/Prometheus/CoursPrometheus/1_grafana_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:      
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: monitoring-grafana
  name: grafana-service
  namespace: monitoring
spec:
  selector:
     app.kubernetes.io/name: grafana
  type: NodePort
  ports:
    - name: grafui      
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30004
