Manifests/Prometheus/CoursPrometheus/2_prometheusIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheusk-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /prometheus(/|$)(.*)
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
